manifest/objects/ALTF__Translation__c.object
<CustomObject>
    <description>Stores translated content looking up to original content</description>
    <fields>
        <fullName>ALTF__Account_Plan_Question__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <label>AM Question</label>
        <referenceTo>ALTF__Account_Plan_Question__c</referenceTo>
        <relationshipLabel>Content Translations</relationshipLabel>
        <relationshipName>Content_Translations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ALTF__Account_Plan_Type__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <label>Plan Type</label>
        <referenceTo>ALTF__Account_Plan_Type__c</referenceTo>
        <relationshipLabel>Content Translations</relationshipLabel>
        <relationshipName>Content_Translations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ALTF__Account_Question__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <label>AM Plan Row Question</label>
        <referenceTo>ALTF__Account_Question__c</referenceTo>
        <relationshipLabel>Content Translations</relationshipLabel>
        <relationshipName>Content_Translations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ALTF__AltifyId__c</fullName>
        <description>An external ID used for Altify</description>
        <externalId>true</externalId>
        <label>AltifyId</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ALTF__Assessment_Criterion__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <label>Assessment Criterion</label>
        <referenceTo>ALTF__Assessment_Question__c</referenceTo>
        <relationshipLabel>Content Translations</relationshipLabel>
        <relationshipName>Content_Translations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ALTF__Language__c</fullName>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ar</fullName>
                </value>
                <value>
                    <fullName>bg</fullName>
                </value>
                <value>
                    <fullName>zh_CN</fullName>
                </value>
                <value>
                    <fullName>zh_TW</fullName>
                </value>
                <value>
                    <fullName>hr</fullName>
                </value>
                <value>
                    <fullName>cs</fullName>
                </value>
                <value>
                    <fullName>da</fullName>
                </value>
                <value>
                    <fullName>nl_NL</fullName>
                </value>
                <value>
                    <fullName>en_GB</fullName>
                </value>
                <value>
                    <fullName>en_US</fullName>
                </value>
                <value>
                    <fullName>fi</fullName>
                </value>
                <value>
                    <fullName>fr</fullName>
                </value>
                <value>
                    <fullName>de</fullName>
                </value>
                <value>
                    <fullName>el</fullName>
                </value>
                <value>
                    <fullName>iw</fullName>
                </value>
                <value>
                    <fullName>hu</fullName>
                </value>
                <value>
                    <fullName>in</fullName>
                </value>
                <value>
                    <fullName>it</fullName>
                </value>
                <value>
                    <fullName>ja</fullName>
                </value>
                <value>
                    <fullName>ko</fullName>
                </value>
                <value>
                    <fullName>no</fullName>
                </value>
                <value>
                    <fullName>pl</fullName>
                </value>
                <value>
                    <fullName>pt_BR</fullName>
                </value>
                <value>
                    <fullName>pt_PT</fullName>
                </value>
                <value>
                    <fullName>ro</fullName>
                </value>
                <value>
                    <fullName>ru</fullName>
                </value>
                <value>
                    <fullName>sk</fullName>
                </value>
                <value>
                    <fullName>sl</fullName>
                </value>
                <value>
                    <fullName>es_MX</fullName>
                </value>
                <value>
                    <fullName>es</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ALTF__Qualifier__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <label>Qualifier</label>
        <referenceTo>ALTF__Sales_Process_Qualifier__c</referenceTo>
        <relationshipLabel>Content Translations</relationshipLabel>
        <relationshipName>Content_Translations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ALTF__Quicklink__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <label>Quicklink</label>
        <referenceTo>ALTF__Quicklink__c</referenceTo>
        <relationshipLabel>Content Translations</relationshipLabel>
        <relationshipName>Content_Translations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ALTF__RefText1__c</fullName>
        <description>Reference field which will contain original language version</description>
        <label>RefText1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALTF__RefText2__c</fullName>
        <description>Reference field which will contain original language version</description>
        <label>RefText2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALTF__RefText3__c</fullName>
        <description>Reference field which will contain original language version</description>
        <label>RefText3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALTF__RefTextLong1__c</fullName>
        <description>Reference field which will contain original language version</description>
        <label>RefTextLong1</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ALTF__RefTextRich1__c</fullName>
        <description>Reference field which will contain original language version</description>
        <label>RefTextRich1</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ALTF__RefTextRich2__c</fullName>
        <label>RefTextRich2</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ALTF__RefURL1__c</fullName>
        <label>RefURL1</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ALTF__Text1__c</fullName>
        <label>Text1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ALTF__Text2__c</fullName>
        <label>Text2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ALTF__Text3__c</fullName>
        <label>Text3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ALTF__TextLong1__c</fullName>
        <label>TextLong1</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ALTF__TextRich1__c</fullName>
        <label>TextRich1</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ALTF__TextRich2__c</fullName>
        <label>TextRich2</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ALTF__URL1__c</fullName>
        <label>URL1</label>
        <type>Url</type>
    </fields>
    <label>Altify Translation</label>
    <nameField>
        <label>Content Translations Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Altify Translations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>